# conquest-bot

./: .gitignore  CMakeLists.txt  IDEAS  README.md  basic_attack_bot.cc  basic_attack_bot.h  bot.cc  bot.h  conquestbot.cc  datatypes.h  gamedata.cc  gamedata.h  generate_submission.sh  io.cc  io.h  old_bots.cc  old_bots.h  prob_math.h  rand.h  strategy.cc  strategy.h  strategy_bot.cc  strategy_bot.h  strategy_manager.h  util.h  write_winchance_table.py
data/: region_names
helpers/: CMakeLists.txt  prob_table.cc  test_debugger.cc  test_math.cc  test_range.cc  test_sort.cc
scripts/: write_names.py  write_winchance_table.py
